@@ -1,0 +1,3 @@
+function hello() {
+    return "Hello, world!";
+}
